--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.4.3+1
   flutter_secure_storage: ^9.2.2
   http: ^1.2.1
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
